# domain-drivers

./: README.md  justfile  pyproject.toml  tach.toml
architecture_decisions_log/: ADR-001-Mixed-SQLAlchemy-Mapping-Strategy.md
schedule/: conftest.py  container.py  stage.py  stage_parallelization.py
schedule/allocation/: __init__.py  allocated_capability.py  allocation_facade.py  allocations.py  demand.py  demands.py  events.py  project.py  project_allocations.py  project_allocations_id.py  projects.py  projects_allocations_summary.py  resource_id.py  simulated_transfer.py  transfer_simulation_service.py
schedule/allocation/capability_scheduling/: __init__.py  allocatable_capabilities_summary.py  allocatable_capability.py  allocatable_capability_id.py  allocatable_capability_repository.py  allocatable_capability_summary.py  allocatable_resource_id.py  capability_finder.py  capability_scheduler.py  capability_selector.py
schedule/allocation/cashflow/: __init__.py  cashflow.py  cashflow_facade.py  cashflow_sqla_repository.py  cost.py  earnings.py  earnings_recalculated_event.py  income.py
schedule/allocation/repository/: allocation_sqla_repository.py
schedule/allocation/tests/: availability_assert.py  conftest.py  test_allocations_to_project.py  test_capability_allocating.py  test_creating_new_project.py  test_demand_scheduling.py  test_potential_transfer_scenarios.py  test_resource_allocating.py
schedule/allocation/transfers/: __init__.py  simulated_project_allocations.py  transfer_simulation_service.py
schedule/availability/: __init__.py  availability_facade.py  blockade.py  calendar.py  calendars.py  grouped_resource_availability.py  owner.py  resource_availability.py  resource_availability_id.py  resource_id.py  resource_taken_over_event.py
schedule/availability/normalized_time_slots/: normalize_slot.py  normalized_time_slot.py  time_quant.py
schedule/availability/repository/: availability_sqla_repository.py  resource_availability_read_model.py
schedule/availability/tests/: conftest.py  test_availability_calendar.py  test_availability_facade.py  test_resource_availability.py  test_resource_availability_sql_repository.py  test_taking_random_resource.py
schedule/availability/time_blocks/: atomic_time_block.py  duration_unit.py  normalized_slot.py
schedule/graphs/: __init__.py  facade.py  graph.py  graph_elements.py
schedule/optimization/: __init__.py  capacity_dimension.py  dp_optimization.py  item.py  optimization_facade.py  result.py  total_capacity.py  total_weight.py  weight_dimension.py
schedule/optimization/tests/: capability_capacity_dimension.py  conftest.py  test_optimization.py  test_optimization_for_timed_capabilities.py
schedule/parallelization/: parallel_stages.py  parallel_stages_seq.py  stage.py  stage_parallelization.py
schedule/planning/: __init__.py  chosen_resources.py  demand.py  demands.py  demands_per_stage.py  events.py  plan_chosen_resources.py  planning_facade.py  project.py  project_card.py  project_id.py
schedule/planning/parallelization/: duration_calculator.py  parallel_stages.py  parallel_stages_seq.py  removal_suggestion.py  stage.py  stage_parallelization.py  stages_to_graph.py
schedule/planning/repository/: planning_sqla_repository.py
schedule/planning/schedule/: schedule.py  schedule_based_on_chosen_resources_availability_calculator.py  schedule_based_on_reference_stage_calculator.py  schedule_based_on_start_day_calculator.py
schedule/planning/tests/: conftest.py  test_plan_rd_project.py  test_plan_specialized_waterfall_project.py  test_plan_standard_waterfall_project.py  test_plan_time_critical_waterfall_project.py  test_plan_vision_project.py  test_planning_facade.py  test_schedule_calculations.py
schedule/resource/: __init__.py  resource_facade.py
schedule/resource/device/: __init__.py  device.py  device_facade.py  device_id.py  device_repository.py  device_summary.py
schedule/resource/employee/: __init__.py  employee.py  employee_facade.py  employee_id.py  employee_repository.py  employee_summary.py
schedule/resource_scheduling/: __init__.py  device_capabilities_scheduler.py  employee_allocation_policy.py  employee_capabilities_scheduler.py  resouce_scheduling_facade.py  to_allocatable_resource_id.py
schedule/resource_scheduling/tests/: test_allocation_policies.py  test_schedule_device_capabilities.py  test_schedule_employee_capabilities.py
schedule/risk/: risk_periodic_check_saga.py  risk_periodic_check_saga.pyi  risk_periodic_check_saga_dispatcher.py  risk_periodic_check_saga_id.py  risk_push_notification.py  risk_sqla_repository.py  verify_critical_resource_available_during_planning.py  verify_enough_demands_during_planning.py  verify_needed_resources_available_in_time_slot.py
schedule/risk/tests/: test_risk_periodic_check_saga.py  test_risk_periodic_check_saga_dispatcher_e2e.py  (+1 more)
schedule/shared/: converters.py  resource_name.py  utcnow.py
schedule/simulation/: __init__.py  additional_priced_capability.py  available_resource_capability.py  capability.py  capability_performer.py  demand.py  demands.py  project_id.py  result.py  simulated_capabilities.py  simulated_project.py  simulation_facade.py  time_slot.py
schedule/sorter/: __init__.py  edge.py  graph.py  node.py
schedule/tests/: test_stages.py
(+42 files in other folders)
