[project]
name = "domain-drivers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.1.0",
    "factory-boy>=3.3.3",
    "frozendict>=2.4.6",
    "types-factory-boy>=0.4.1",
]

[tool.ruff]
show-fixes = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.9",
]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
exclude = [
    ".*test_.*",
    ".*tests/.*.*"
]
